--- a/web/css/style.css
+++ b/web/css/style.css
@@ -36,3 +36,15 @@ h1, h2 {
 .page {
   padding-left: 25px;
 }
+
+circle.node {
+  cursor: pointer;
+  stroke: #000;
+  stroke-width: .5px;
+}
+
+line.link {
+  fill: none;
+  stroke: #9ecae1;
+  stroke-width: 1.5px;
+}
