--- a/web/css/style.css
+++ b/web/css/style.css
@@ -52,3 +52,13 @@ line.link {
   stroke: #9ecae1;
   stroke-width: 1.5px;
 }
+
+.axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.rankingRect:hover {
+  cursor: pointer;
+}
