Now RankingView can correctly update.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -72,6 +72,11 @@ line.link {
   shape-rendering: crispEdges;
 }
 
+.axis .minor {
+  stroke: gray;
+  stroke-width: 1px;
+}
+
 .rankingRect:hover {
   cursor: pointer;
 }
