--- a/web/css/style.css
+++ b/web/css/style.css
@@ -10,6 +10,11 @@
   stroke-width: 1.5px;
 }
 
+span.rating {
+  font-family: 'Candal', sans-serif;
+  padding-left: 10px;
+}
+
 div.tooltip {
   position: absolute;
   text-align: center;
@@ -33,6 +38,8 @@ div#detail {
   border-radius: 8px;
   left: 1300px;
   top: 120px;
+  height: 800px;
+  overflow-y: scroll;
 }
 
 body {
