--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,7 +2,6 @@
   cursor: pointer;
   stroke: green;
   stroke-width: 1.5px;
-  fill-opacity: 0.8;
 }
 
 .link {
@@ -39,7 +38,7 @@ div#detail {
   border-radius: 8px;
   left: 1300px;
   top: 120px;
-  height: 800px;
+  height: 1000px;
   overflow-y: scroll;
 }
 
@@ -69,6 +68,7 @@ circle.node {
   cursor: pointer;
   stroke: #000;
   stroke-width: .5px;
+  fill-opacity: 0.8;
 }
 
 line.link {
@@ -106,4 +106,8 @@ hr {
   border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+span.text {
+  width: 200px;
 }
