--- a/web/css/style.css
+++ b/web/css/style.css
@@ -108,6 +108,6 @@ hr {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-span.text {
+div.text {
   width: 200px;
 }
